--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="/js/script.js"></script>
 </head>
 <body>
-
+<div class="header"></div>
+<div class="js-slides slides">
+    <div class="js-slide-1 slide slide-1">
+        <h3 class="title">We tap our planet to use our Oil</h3>
+        <div class="earth">
+            <div class="oil-tap"></div>
+        </div>
+    </div>
+    <div class="js-slide-2 slide slide-2">
+        <h3 class="title">We burn other resource Natural Gas</h3>
+        <div class="earth">
+        </div>
+    </div>
+</div>
 </body>
 </html>
