Slides class added

--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <script src="/js/script.js"></script>
 </head>
 <body>
-<div class="header"></div>
 <div class="js-slides slides">
-    <div class="js-slide-1 slide slide-1">
-        <h3 class="title">We tap our planet to use our Oil</h3>
+    <div class="js-slide-1 slide slide-1 hide">
+        <h3 class="title">We tap our planet to use our<br/> Oil</h3>
+
         <div class="earth">
-            <div class="oil-tap"></div>
+            <div class="oil-tap js-oil-tap"></div>
         </div>
     </div>
-    <div class="js-slide-2 slide slide-2">
-        <h3 class="title">We burn other resource Natural Gas</h3>
+    <div class="js-slide-2 slide slide-2 hide">
+        <h3 class="title">We burn other resource<br/> Natural Gas</h3>
+
         <div class="earth">
+            <div class="oil-tap js-oil-tap"></div>
+        </div>
+        <div class="gas-burn js-gus-burn">
+            <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
+        </div>
+    </div>
+    <div class="js-slide-3 slide slide-3 hide">
+        <h3 class="title">The usage of this resources<br/> give us al least these<br/> 6 Challenges Click to the
+            pictures to see<br/> a video about it on<br/> Tedx</h3>
+
+        <div class="earth"></div>
+        <div class="gas-burn js-gus-burn">
+            <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
         </div>
     </div>
 </div>
