Slides class added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             <div class="oil-tap js-oil-tap"></div>
         </div>
     </div>
+    <div class="js-slide-1-fade-out slide slide-1-fade-out hide">
+        <h3 class="title js-title">We tap our planet to use our<br/> Oil</h3>
+
+        <div class="earth">
+            <div class="oil-tap js-oil-tap"></div>
+        </div>
+    </div>
+    <div class="js-slide-2-fade-in slide slide-2-fade-in hide">
+        <h3 class="title js-title">We burn other resource<br/> Natural Gas</h3>
+
+        <div class="earth">
+            <div class="oil-tap js-oil-tap"></div>
+        </div>
+    </div>
     <div class="js-slide-2 slide slide-2 hide">
         <h3 class="title">We burn other resource<br/> Natural Gas</h3>
 
@@ -34,6 +48,92 @@
         <div class="gas-burn js-gus-burn">
             <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
         </div>
+    </div>
+    <div class="js-slide-3-fade-out slide slide-3-fade-out hide">
+        <h3 class="title">The usage of this resources<br/> give us al least these<br/> 6 Challenges Click to the
+            pictures to see<br/> a video about it on<br/> Tedx</h3>
+
+        <div class="earth"></div>
+    </div>
+    <div class="js-slide-4 slide slide-4 hide">
+        <h3 class="title">1. Global Warning<br/> Click to see an inspirational Video about Global Warning</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+    </div>
+    <div class="js-slide-4-fade-out slide slide-4-fade-out hide">
+        <h3 class="title">1. Global Warning<br/> Click to see an inspirational Video<br/> About Global Warning</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+    </div>
+    <div class="js-slide-5 slide slide-5 hide">
+        <h3 class="title">2. Ocean Acidification<br/> Click to see an inspirational Video<br/> about Global Warning</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+    </div>
+    <div class="js-slide-5-out slide slide-5-out hide">
+        <h3 class="title">2. Ocean Acidification<br/> Click to see an inspirational Video<br/> about Global Warning</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+    </div>
+    <div class="js-slide-6 slide slide-6 hide">
+        <h3 class="title">3. Declining Arctic Ice<br/> Click to see a good Video<br/> about the Decline</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
+    </div>
+    <div class="js-slide-6-fade-out slide slide-6-fade-out hide">
+        <h3 class="title">3. Declining Arctic Ice<br/> Click to see a good Video<br/> about the Decline</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
+    </div>
+    <div class="js-slide-7 slide slide-7 hide">
+        <h3 class="title">4. Extreme Events<br/>Click to see a good Video<br/>about extreme events</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
+    </div>
+    <div class="js-slide-7-fade-out slide slide-7-fade-out hide">
+        <h3 class="title">4. Extreme Events<br/>Click to see a good Video<br/>about extreme events</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
+    </div>
+    <div class="js-slide-7-fade-out slide slide-7-fade-out hide">
+        <h3 class="title">5. Flooding<br/>Click to see a clear Video<br/>about flooding dangers.</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="flooding_dangers"></a>
+    </div>
+    <div class="js-slide-8 slide slide-8 hide">
+        <h3 class="title">6. Glacier Retreat<br/>Click to see a good Video<br/>how to glaciers retreat.</h3>
+
+        <div class="earth"></div>
+        <a href="#" target="_blank" class="global-warming"></a>
+        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
+        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="flooding_dangers"></a>
     </div>
 </div>
 </body>
