Some more slides have been added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 </head>
 <body>
 <div class="js-slides slides">
+    <div class="js-hand-world slide slide-hand-world hide">
+        <h3 class="title">The world as we got it</h3>
+
+        <img src="/images/hand_world.jpg" width="600" height="904" class="hand-world" />
+    </div>
+    <div class="js-our-beautiful-planet slide slide-our-beautiful-planet hide">
+        <h3 class="title">What do we do with this beautiful<br/>Planet ?</h3>
+        <div class="earth"></div>
+    </div>
+    <div class="js-coal-burning slide slide-coal-burning hide">
+        <h3 class="title js-title">We burn our natural resources like<br/>Coal</h3>
+
+        <div class="earth">
+            <div class="burn-coal js-burn-coal"></div>
+        </div>
+    </div>
     <div class="js-slide-1 slide slide-1 hide">
-        <h3 class="title">We tap our planet to use our<br/> Oil</h3>
+        <h3 class="title js-title">We tap our planet to use our<br/> Oil</h3>
 
         <div class="earth">
             <div class="oil-tap js-oil-tap"></div>
