Some more slides have been added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div class="js-hand-world slide slide-hand-world hide">
         <h3 class="title">The world as we got it</h3>
 
-        <img src="/images/hand_world.jpg" width="600" height="904" class="hand-world" />
+        <img src="/images/hand_world.jpg" width="600" height="904" class="hand-world"/>
     </div>
     <div class="js-our-beautiful-planet slide slide-our-beautiful-planet hide">
         <h3 class="title">What do we do with this beautiful<br/>Planet ?</h3>
+
         <div class="earth"></div>
     </div>
     <div class="js-coal-burning slide slide-coal-burning hide">
@@ -25,28 +26,28 @@
             <div class="burn-coal js-burn-coal"></div>
         </div>
     </div>
-    <div class="js-slide-1 slide slide-1 hide">
+    <div class="js-tap-planet slide tap-planet hide">
         <h3 class="title js-title">We tap our planet to use our<br/> Oil</h3>
 
         <div class="earth">
             <div class="oil-tap js-oil-tap"></div>
         </div>
     </div>
-    <div class="js-slide-1-fade-out slide slide-1-fade-out hide">
+    <div class="js-tap-planet-fade-out slide tap-planet-fade-out hide">
         <h3 class="title js-title">We tap our planet to use our<br/> Oil</h3>
 
         <div class="earth">
             <div class="oil-tap js-oil-tap"></div>
         </div>
     </div>
-    <div class="js-slide-2-fade-in slide slide-2-fade-in hide">
+    <div class="js-slide-natural-gas-fade-in slide slide-natural-gas-fade-in hide">
         <h3 class="title js-title">We burn other resource<br/> Natural Gas</h3>
 
         <div class="earth">
             <div class="oil-tap js-oil-tap"></div>
         </div>
     </div>
-    <div class="js-slide-2 slide slide-2 hide">
+    <div class="js-slide-natural-gas slide slide-natural-gas hide">
         <h3 class="title">We burn other resource<br/> Natural Gas</h3>
 
         <div class="earth">
@@ -56,8 +57,9 @@
             <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
         </div>
     </div>
-    <div class="js-slide-3 slide slide-3 hide">
-        <h3 class="title">The usage of this resources<br/> give us al least these<br/> 6 Challenges Click to the
+    <div class="js-slide-6-challenges slide slide-6-challenges hide">
+        <h3 class="title js-title">The usage of this resources<br/> give us at least these<br/> 6 Challenges Click to
+            the
             pictures to see<br/> a video about it on<br/> Tedx</h3>
 
         <div class="earth"></div>
@@ -65,91 +67,131 @@
             <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
         </div>
     </div>
-    <div class="js-slide-3-fade-out slide slide-3-fade-out hide">
-        <h3 class="title">The usage of this resources<br/> give us al least these<br/> 6 Challenges Click to the
-            pictures to see<br/> a video about it on<br/> Tedx</h3>
+    <div class="js-slide-global-warming slide slide-global-warming hide">
+        <h3 class="title js-title">1. Global Warming<br/>Click to see an inspirational Video<br/>About Global Warming
+        </h3>
 
-        <div class="earth"></div>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg" width="136" height="91" alt="Global Warming"/>
+            </a>
+        </div>
     </div>
-    <div class="js-slide-4 slide slide-4 hide">
-        <h3 class="title">1. Global Warning<br/> Click to see an inspirational Video about Global Warning</h3>
+    <div class="js-slide-ocean-acidification slide slide-ocean-acidification hide">
+        <h3 class="title js-title">2. Ocean Acidification<br/>Click to see an beautiful Video<br/>about Acidification
+        </h3>
 
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+        </div>
     </div>
-    <div class="js-slide-4-fade-out slide slide-4-fade-out hide">
-        <h3 class="title">1. Global Warning<br/> Click to see an inspirational Video<br/> About Global Warning</h3>
+    <div class="js-slide-arctic-ice slide slide-arctic-ice hide">
+        <h3 class="title js-title">3. Declining Arctic Ice<br/>Click to see a good Video<br/>about the Decline</h3>
 
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+        </div>
     </div>
-    <div class="js-slide-5 slide slide-5 hide">
-        <h3 class="title">2. Ocean Acidification<br/> Click to see an inspirational Video<br/> about Global Warning</h3>
+    <div class="js-slide-extreme-events slide slide-extreme-events hide">
+        <h3 class="title js-title">4. Extreme Events<br/>Click to see a good Video<br/>about extreme events</h3>
 
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges extreme_events">
+                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+            </a>
+        </div>
     </div>
-    <div class="js-slide-5-out slide slide-5-out hide">
-        <h3 class="title">2. Ocean Acidification<br/> Click to see an inspirational Video<br/> about Global Warning</h3>
+    <div class="js-slide-flooding slide slide-flooding hide">
+        <h3 class="title js-title">5. Flooding<br/>Click to see a clear Video<br/>about flooding dangers.</h3>
 
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges extreme_events">
+                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges flooding_dangers">
+                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+            </a>
+        </div>
     </div>
-    <div class="js-slide-6 slide slide-6 hide">
-        <h3 class="title">3. Declining Arctic Ice<br/> Click to see a good Video<br/> about the Decline</h3>
+    <div class="js-slide-glacier-retreat slide slide-glacier-retreat hide">
+        <h3 class="title js-title">6. Glacier Retreat<br/>Click to see a good Video<br/>how glaciers retreat.</h3>
 
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
-    </div>
-    <div class="js-slide-6-fade-out slide slide-6-fade-out hide">
-        <h3 class="title">3. Declining Arctic Ice<br/> Click to see a good Video<br/> about the Decline</h3>
-
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
-    </div>
-    <div class="js-slide-7 slide slide-7 hide">
-        <h3 class="title">4. Extreme Events<br/>Click to see a good Video<br/>about extreme events</h3>
-
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
-    </div>
-    <div class="js-slide-7-fade-out slide slide-7-fade-out hide">
-        <h3 class="title">4. Extreme Events<br/>Click to see a good Video<br/>about extreme events</h3>
-
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
-    </div>
-    <div class="js-slide-7-fade-out slide slide-7-fade-out hide">
-        <h3 class="title">5. Flooding<br/>Click to see a clear Video<br/>about flooding dangers.</h3>
-
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="flooding_dangers"></a>
-    </div>
-    <div class="js-slide-8 slide slide-8 hide">
-        <h3 class="title">6. Glacier Retreat<br/>Click to see a good Video<br/>how to glaciers retreat.</h3>
-
-        <div class="earth"></div>
-        <a href="#" target="_blank" class="global-warming"></a>
-        <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank" class="ocean-acidification"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="declining-ice"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="extreme_events"></a>
-        <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank" class="flooding_dangers"></a>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges extreme_events">
+                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges flooding_dangers">
+                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges glacier-retreat">
+                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+            </a>
+        </div>
     </div>
 </div>
 </body>
