Some more slides have been added

--- a/index.html
+++ b/index.html
@@ -193,6 +193,106 @@
             </a>
         </div>
     </div>
+    <div class="js-slide-rectangles-clickable slide slide-rectangles-clickable hide">
+        <h3 class="title js-title">THe rectangles are clickable to<br/>
+            show you an inspirational video<br/>
+            from Tedx or YouTube about<br/>
+            the changes and challenges<br/>
+            on our world Today.</h3>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges extreme_events">
+                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges flooding_dangers">
+                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges glacier-retreat">
+                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+            </a>
+        </div>
+    </div>
+    <div class="js-slide-first-six-challenges slide slide-first-six-challenges hide">
+        <h3 class="title js-title">These are the first 6<br/>
+            Challenges that we see,<br/>
+            we have no option,<br/>
+            we have to decrease CO2<br/>
+            Dramatically.</h3>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges extreme_events">
+                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges flooding_dangers">
+                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges glacier-retreat">
+                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+            </a>
+        </div>
+    </div>
+    <div class="js-slide-turn-the-world slide slide-turn-the-world hide">
+        <h3 class="title js-title">First let’s turn the world<br/>
+            into it’s natural<br/>
+            Position</h3>
+        <div class="earth">
+            <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
+                <img src="/images/global_warming.jpg"
+                     width="136" height="91"
+                     alt="Global Warming"/>
+            </a>
+            <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
+               class="js-rectangle six-challenges ocean-acidification">
+                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+            </a>
+            <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges declining-ice">
+                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges extreme_events">
+                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges flooding_dangers">
+                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+            </a>
+            <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
+               class="js-rectangle six-challenges glacier-retreat">
+                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+            </a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
