Slides have been optimized

--- a/index.html
+++ b/index.html
@@ -194,11 +194,12 @@
         </div>
     </div>
     <div class="js-slide-rectangles-clickable slide slide-rectangles-clickable hide">
-        <h3 class="title js-title">THe rectangles are clickable to<br/>
+        <h3 class="title js-title">The rectangles are clickable to<br/>
             show you an inspirational video<br/>
             from Tedx or YouTube about<br/>
             the changes and challenges<br/>
             on our world Today.</h3>
+
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
                 <img src="/images/global_warming.jpg"
@@ -233,6 +234,7 @@
             we have no option,<br/>
             we have to decrease CO2<br/>
             Dramatically.</h3>
+
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
                 <img src="/images/global_warming.jpg"
@@ -265,6 +267,7 @@
         <h3 class="title js-title">First let’s turn the world<br/>
             into it’s natural<br/>
             Position</h3>
+
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
                 <img src="/images/global_warming.jpg"
@@ -291,6 +294,15 @@
                class="js-rectangle six-challenges glacier-retreat">
                 <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
             </a>
+        </div>
+    </div>
+    <div class="js-slide-logo slide slide-turn-the-world hide">
+        <h3 class="title js-title">First let’s turn the world<br/>
+            into it’s natural<br/>
+            Position</h3>
+
+        <div class="earth js-earth">
+            <div class="logo"></div>
         </div>
     </div>
 </div>
