Added few slides

--- a/index.html
+++ b/index.html
@@ -296,13 +296,119 @@
             </a>
         </div>
     </div>
-    <div class="js-slide-logo slide slide-turn-the-world hide">
+    <div class="js-slide-logo slide slide-logo hide">
         <h3 class="title js-title">First let’s turn the world<br/>
             into it’s natural<br/>
             Position</h3>
 
         <div class="earth js-earth">
             <div class="logo"></div>
+        </div>
+    </div>
+    <div class="js-slide-logo-180 slide slide-logo-180 hide">
+        <h3 class="title js-title">First let’s turn the world<br/>
+            into it’s natural<br/>
+            Position</h3>
+
+        <div class="earth_180 js-earth">
+            <div class="logo_180"></div>
+        </div>
+    </div>
+    <div class="js-slide-natural-resources slide slide-natural-resources hide">
+        <h3 class="title js-title">And see what Natural resources<br/>
+            could do</h3>
+
+        <div class="earth_180 js-earth">
+            <div class="logo_180 js-logo-180"></div>
+        </div>
+    </div>
+    <div class="js-slide-water slide slide-water hide">
+        <h3 class="title js-title">Water, has a strong potential.<br/>
+            70% of the earth’s surface consists of<br/>
+            Water. It provides almost all energy<br/>
+            for Norway</h3>
+
+        <div class="earth_180 nature_power js-earth">
+            <div class="ocean_power js-ocean_power"></div>
+            <div class="water_line_1 js-water_line_1"></div>
+            <div class="water_line_2 js-water_line_2"></div>
+        </div>
+    </div>
+    <div class="js-slide-wind slide slide-wind hide">
+        <h3 class="title js-title">Wind, has the potential to<br/>
+            provide 20% of the world’s energy<br/>
+            Needs.</h3>
+
+        <div class="earth_180 nature_power js-earth">
+            <div class="ocean_power js-ocean_power"></div>
+            <div class="water_line_1 js-water_line_1"></div>
+            <div class="water_line_2 js-water_line_2"></div>
+            <div class="wind_power js-wind_power"></div>
+            <div class="wind_line_1 js-wind_line_1"></div>
+            <div class="wind_line_2 js-wind_line_2"></div>
+        </div>
+    </div>
+    <div class="js-slide-solar slide slide-solar hide">
+        <h3 class="title js-title">Solar,<br/>
+            This little square is enough to provide<br/>
+            The world’s energy need !!!</h3>
+
+        <div class="earth_180 nature_power js-earth">
+            <div class="ocean_power js-ocean_power"></div>
+            <div class="water_line_1 js-water_line_1"></div>
+            <div class="water_line_2 js-water_line_2"></div>
+            <div class="wind_power js-wind_power"></div>
+            <div class="wind_line_1 js-wind_line_1"></div>
+            <div class="wind_line_2 js-wind_line_2"></div>
+            <div class="solar_power js-solar_power"></div>
+            <div class="sun_line_1 js-sun_line_1"></div>
+            <div class="sun_line_2 js-sun_line_2"></div>
+            <div class="solar_rectangle js-solar_rectangle"></div>
+        </div>
+    </div>
+    <div class="js-slide-desert-energy slide slide-desert-energy hide">
+        <h3 class="title js-title">We Have enough Clean Energy !!<br/>
+            More then 300 times of what we need.<br/>
+            This square is less then 0,2% of our desert surface</h3>
+
+        <div class="earth_180 nature_power js-earth">
+            <div class="ocean_power js-ocean_power"></div>
+            <div class="water_line_1 js-water_line_1"></div>
+            <div class="water_line_2 js-water_line_2"></div>
+            <div class="wind_power js-wind_power"></div>
+            <div class="wind_line_1 js-wind_line_1"></div>
+            <div class="wind_line_2 js-wind_line_2"></div>
+            <div class="solar_power js-solar_power"></div>
+            <div class="sun_line_1 js-sun_line_1"></div>
+            <div class="sun_line_2 js-sun_line_2"></div>
+            <div class="solar_rectangle js-solar_rectangle"></div>
+        </div>
+    </div>
+    <div class="js-slide-energy-choice slide slide-energy-choice hide">
+        <h3 class="title js-title">It’s our Energy Choice.</h3>
+
+        <div class="earth_180 nature_power js-earth">
+            <div class="ocean_power js-ocean_power"></div>
+            <div class="water_line_1 js-water_line_1"></div>
+            <div class="water_line_2 js-water_line_2"></div>
+            <div class="wind_power js-wind_power"></div>
+            <div class="wind_line_1 js-wind_line_1"></div>
+            <div class="wind_line_2 js-wind_line_2"></div>
+            <div class="solar_power js-solar_power"></div>
+            <div class="sun_line_1 js-sun_line_1"></div>
+            <div class="sun_line_2 js-sun_line_2"></div>
+            <div class="solar_rectangle js-solar_rectangle"></div>
+        </div>
+    </div>
+    <div class="js-slide-energy-40 slide slide-energy-40 hide">
+        <h3 class="title js-title">We decide directly for more then 40%<br/>
+            of the Energy Source.</h3>
+
+        <div class="parted_world">
+            <div class="earth_60 js-earth_60"></div>
+            <div class="earth_20"></div>
+            <div class="earth_20_2"></div>
+            <div class="earth_part_1"></div>
         </div>
     </div>
 </div>
